tests/paczka1/small_fuzzy/46545423.err
Error in line 5: IBJ1GO7RkHb S51 91,71
Error in line 11: fbnnXG3y A229 88,5
